ci(package): run tests in an explicit environment (`jest --env node`)

--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "release:ci": "conventional-github-releaser -p angular",
     "release:validate": "commitlint --from=$(git describe --tags --abbrev=0) --to=$(git rev-parse HEAD)",
     "security": "nsp check",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --collectCoverageFrom='src/**/*.js' --coverage",
+    "test": "jest --env node",
+    "test:watch": "npm run test -- --watch",
+    "test:coverage": "npm run test -- --collectCoverageFrom='src/**/*.js' --coverage",
     "test:manual": "webpack-dev-server test/manual/src/index.js --open --config test/manual/webpack.config.js",
     "ci:lint": "npm run lint && npm run security",
     "ci:test": "npm run test -- --runInBand",
